--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,16 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: linear-gradient(to right,#000,#0575e6);
+    text-align: center;
 }
+
+::selection {
+  background-color: #013896;
+  color: #f1f1f1;
+} 
+
+.fullheight { height: 100vh; } 
 
 .chat-container {
     width: 80%;
@@ -25,7 +34,10 @@ body {
 
 /* Стили для сообщений чата */
 .chat-message {
-    
+    width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin-bottom: 15px;
 }
 
