--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* Общие стили для страницы */
 body {
     font-family: Consolas, lucida console;
-    background-color: #88BF73;
-    color: #88BF73;
+    background-color: #212121;
+    color: #0D7377;
     margin: 0;
     padding: 0;
     display: grid;
@@ -14,8 +14,8 @@ body {
 }
 
 ::selection {
-  background-color: #88BF73;
-  color: #88BF73;
+  background-color: #323232;
+  color: #14FFEC;
 } 
 
 .fullheight { height: 100vh; } 
@@ -23,9 +23,9 @@ body {
 .chat-container {
     width: 80%;
     max-width: 1000px;
-    border: 1px solid #88BF73;
+    border: 1px solid #323232;
     border-radius: 15px;
-    background-color: #1e1e1e;
+    background-color: #0D7377;
     padding: 25px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
     overflow-y: auto;
@@ -46,7 +46,7 @@ body {
 }
 
 .chat-message.bot {
-    background-color: #88BF73;
+    background-color: #323232;
     padding: 10px;
     border-radius: 10px;
     position: relative;
