--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,13 @@ body {
 
 ::selection {
   background-color: #21323d;
-  color: #db9941;
+  color: #ae2c11;
 } 
 
 .fullheight { height: 100vh; } 
 
 .chat-container {
-    width: 80%;
+    width: 95%;
     max-width: 1200px;
     border: 1px solid #21323d;
     border-radius: 15px;
@@ -42,11 +42,11 @@ body {
 .chat-message p {
     font-weight: bold;
     margin: 0;
-    color: #ae2c11;
+    color: #db9941;
 }
 
 .chat-message.bot {
-    background-color: #323232;
+    background-color: #07111d;
     padding: 10px;
     border-radius: 10px;
     position: relative;
@@ -78,7 +78,7 @@ pre {
 
 code {
     font-family: monospace;
-    color: #ae2c11;
+    color: #db9941;
     text-align: justify;
 }
 
