--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body {
 .chat-message p {
     font-weight: bold;
     margin: 0;
-    color: #975642;
+    color: #e1c5d5;
 }
 
 .chat-message.bot {
