--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to right,#fff,#131312);
+    background: linear-gradient(to bottom,#8f3acb,#131312);
     text-align: center;
 }
 
