--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ html, body {
 .chat-message.bot::before {
     content: '';
     position: absolute;
-    top: 50%;
+    left: 10px; right: 10px; top: 10px; bottom: 10px;
     left: -15px;
     width: 0;
     height: 0;
