--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ html, body {
   color: #ae2c11;
 } 
 
-.chat-container {
+/*.chat-container {
     width: 100%;
     max-wight: 1200px;
     border-radius: 10px;
@@ -31,7 +31,7 @@ html, body {
     gap: 10px;
 }
 
-/* Стили для сообщений чата */
+ Стили для сообщений чата */
 .chat-message {
     box-sizing: border-box;
     word-wrap: break-word;
