--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ html, body {
     background-color: #131312;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    overflow: hidden;
     height: 100%;
     box-sizing: border-box;
     display: flex;
