--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html, body {
     align-items: center;
     height: 100%;
     text-align: center;
-    overflow: scroll;
+    overflow: auto;
 
 }
 
