--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ h2, h3 {
     margin-bottom: 10px;
     overflow: auto;
     font-family: 'Courier New', Courier, monospace;
+    cursor: pointer; /* Показываем, что код можно кликнуть */
+}
+
+.code-container:hover {
+    background-color: #3c3c3c; /* Слегка изменяем фон при наведении */
 }
 
 .copy-button {
@@ -33,7 +38,6 @@ h2, h3 {
 
 .code-container:hover .copy-button {
     display: block; /* Показываем кнопку при наведении на блок кода */
-    cursor: pointer;
 }
 
 .copy-button:focus,
