--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,8 @@ body {
     color: #d4d4d4;
     padding: 20px;
     display: flex;
-    justify-content: center; /* Горизонтальное центрирование */
-    align-items: center; /* Вертикальное центрирование */
-    height: 100vh; /* Укажите высоту контейнера */
+    width: 50%; /* Укажите ширину элемента */
+    margin: 0 auto; /* Горизонтальное центрирование */
     text-align: center;
 
 
@@ -27,9 +26,8 @@ h2, h3 {
     font-family: 'Courier New', Courier, monospace;
     cursor: pointer; /* Показываем, что код можно кликнуть */
     display: flex;
-    justify-content: center; /* Горизонтальное центрирование */
-    align-items: center; /* Вертикальное центрирование */
-    height: 100vh; /* Укажите высоту контейнера */
+    width: 50%; /* Укажите ширину элемента */
+    margin: 0 auto; /* Горизонтальное центрирование */
 }
 
 .code-container:hover {
